--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -187,8 +187,9 @@
     </div>
     <div class="col-md-3">
       <div class="1234"></div>
+      hello world
       <%= google_adsense_include_tag client: 'ca-pub-7581132771547508', slot: '1234', enable_page_level_ads: true %>
     </div>
 </div>
-</div>
-</div>
+
+
