--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,3 +8,35 @@
     </ul>
   </nav>
 </div>
+
+<style>
+  @media screen and (max-width: 320px) {
+    .footer {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .footer {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 650px) {
+    .footer {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 980px) {
+    .footer {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 980px) {
+    .footer {
+      display: none;
+    }
+  }
+</style>
