--- a/app/views/users/_user_metrics.html.erb
+++ b/app/views/users/_user_metrics.html.erb
@@ -4,7 +4,7 @@
     /*max-height: 20%;*/
   }
 </style>
-<div class="row">
+<div class="row user-certs">
   <% Certification::CODES.each do |code| %>
     <div class="col-lg-2">
       <div class="widget style1">
@@ -169,3 +169,35 @@
 <!--</div>-->
 <!--</div>-->
 <!--</div>-->
+
+<style>
+  @media screen and (max-width: 320px) {
+    .user-certs {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .user-certs {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 650px) {
+    .user-certs {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 980px) {
+    .user-certs {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 980px) {
+    .user-certs {
+      display: none;
+    }
+  }
+</style>
