[graphql-add][ RJ ] added graphql

--- a/app/views/users/_main_nav.html.erb
+++ b/app/views/users/_main_nav.html.erb
@@ -5,7 +5,7 @@
 </li>
 <li class="">
   <a href="#">
-    <i class="fas fa-question-circle"></i> <span class="nav-label"> FAQ</span>
+    <i class="fas fa-ambulance"></i> <span class="nav-label"> Live Map</span>
   </a>
 </li>
 <li class="<%= is_active_controller('users') %>">
