[issue-28][ RJ ] updated the color scheme.

--- a/app/views/appviews/timeline.html.erb
+++ b/app/views/appviews/timeline.html.erb
@@ -202,7 +202,7 @@
 
 $(function() {
 
-    var updatingChart = $(".updating-chart").peity("line", { fill: '#446CB3', stroke: '#169c81', width: 64 })
+    var updatingChart = $(".updating-chart").peity("line", { fill: '#1C76BB', stroke: '#169c81', width: 64 })
 
     setInterval(function () {
         var random = Math.round(Math.random() * 10)
