--- a/app/views/dashboards/dashboard_3.html.erb
+++ b/app/views/dashboards/dashboard_3.html.erb
@@ -359,7 +359,7 @@
 $(function() {
 
     $(".bar_dashboard").peity("bar", {
-        fill: ["#446CB3", "#d7d7d7"],
+        fill: ["#1C76BB", "#d7d7d7"],
         width: 100
     })
 
