--- a/app/views/graphs/morris.html.erb
+++ b/app/views/graphs/morris.html.erb
@@ -198,7 +198,7 @@ $(function() {
         resize: true,
         lineWidth: 4,
         labels: ['Value'],
-        lineColors: ['#446CB3'],
+        lineColors: ['#1C76BB'],
         pointSize: 5,
     });
 
@@ -220,7 +220,7 @@ $(function() {
         pointSize: 2,
         hideHover: 'auto',
         resize: true,
-        lineColors: ['#87d6c6', '#54cdb4', '#446CB3'],
+        lineColors: ['#87d6c6', '#54cdb4', '#1C76BB'],
         lineWidth: 2,
         pointSize: 1,
     });
@@ -231,7 +231,7 @@ $(function() {
             { label: "In-Store Sales", value: 30 },
             { label: "Mail-Order Sales", value: 20 }],
         resize: true,
-        colors: ['#87d6c6', '#54cdb4', '#446CB3'],
+        colors: ['#87d6c6', '#54cdb4', '#1C76BB'],
     });
 
     Morris.Bar({
@@ -248,7 +248,7 @@ $(function() {
         labels: ['Series A', 'Series B'],
         hideHover: 'auto',
         resize: true,
-        barColors: ['#446CB3', '#cacaca'],
+        barColors: ['#1C76BB', '#cacaca'],
     });
 
     Morris.Line({
@@ -265,7 +265,7 @@ $(function() {
         labels: ['Series A', 'Series B'],
         hideHover: 'auto',
         resize: true,
-        lineColors: ['#54cdb4', '#446CB3'],
+        lineColors: ['#54cdb4', '#1C76BB'],
     });
 
 });
