--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -123,15 +123,15 @@
     }
 
     a {
-      color: #446CB3;
+      color: #1C76BB;
       text-decoration: underline
     }
 
     .btn-primary {
       text-decoration: none;
       color: #FFF;
-      background-color: #446CB3;
-      border: solid #446CB3;
+      background-color: #1C76BB;
+      border: solid #1C76BB;
       border-width: 5px 10px;
       line-height: 2;
       font-weight: 700;
@@ -191,7 +191,7 @@
     }
 
     .alert.alert-good {
-      background: #446CB3
+      background: #1C76BB
     }
 
     .invoice {
