--- a/app/assets/stylesheets/base/chat.scss
+++ b/app/assets/stylesheets/base/chat.scss
@@ -15,7 +15,7 @@
   height: 38px;
   width: 38px;
   display: block;
-  background: #446CB3;
+  background: #1C76BB;
   padding: 9px 8px;
   text-align: center;
   color: #fff;
@@ -24,7 +24,7 @@
 
 .open-small-chat:hover {
   color: white;
-  background: #446CB3;
+  background: #1C76BB;
 }
 
 .small-chat-box {
@@ -93,7 +93,7 @@
     }
 
     .chat-message.active {
-      background: #446CB3;
+      background: #1C76BB;
       color: #fff;
     }
 
