--- a/app/assets/stylesheets/base/elements.scss
+++ b/app/assets/stylesheets/base/elements.scss
@@ -996,7 +996,7 @@ div.dt-button-info {
   display: block;
   overflow: hidden;
   cursor: pointer;
-  border: 2px solid #446CB3;
+  border: 2px solid #1C76BB;
   border-radius: 3px;
 }
 
@@ -1029,7 +1029,7 @@ div.dt-button-info {
 .onoffswitch-inner:before {
   content: "ON";
   padding-left: 7px;
-  background-color: #446CB3;
+  background-color: #1C76BB;
   color: #FFFFFF;
 }
 
@@ -1046,7 +1046,7 @@ div.dt-button-info {
   width: 18px;
   margin: 0;
   background: #FFFFFF;
-  border: 2px solid #446CB3;
+  border: 2px solid #1C76BB;
   border-radius: 3px;
   position: absolute;
   top: 0;
