--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -1,5 +1,5 @@
 // Basic Colors
-$navy: #446CB3;       // Primary color
+$navy: #1C76BB;       // Primary color
 $dark-gray: #c2c2c2;  // Default color
 $blue: #1c84c6;       // Success color
 $lazur: #23c6c8;      // Info color
