--- a/app/views/appviews/issue_tracker.html.erb
+++ b/app/views/appviews/issue_tracker.html.erb
@@ -533,7 +533,7 @@
         $(function () {
 
             $("span.pie").peity("pie", {
-                fill: ['#446CB3', '#d7d7d7', '#ffffff']
+                fill: ['#1C76BB', '#d7d7d7', '#ffffff']
             })
 
         });
