--- a/app/views/appviews/profile_two.html.erb
+++ b/app/views/appviews/profile_two.html.erb
@@ -440,7 +440,7 @@ $(function() {
         type: 'line',
         width: '100%',
         height: '50',
-        lineColor: '#446CB3',
+        lineColor: '#1C76BB',
         fillColor: "transparent"
     });
 
