--- a/app/views/graphs/flot.html.erb
+++ b/app/views/graphs/flot.html.erb
@@ -210,7 +210,7 @@ $(function() {
         xaxis: {
             tickDecimals: 0
         },
-        colors: ["#446CB3"],
+        colors: ["#1C76BB"],
         grid: {
             color: "#999999",
             hoverable: true,
@@ -260,7 +260,7 @@ $(function() {
         xaxis: {
             tickDecimals: 0
         },
-        colors: ["#446CB3"],
+        colors: ["#1C76BB"],
         grid: {
             color: "#999999",
             hoverable: true,
@@ -305,7 +305,7 @@ $(function() {
     }, {
         label: "Sales 4",
         data: 52,
-        color: "#446CB3",
+        color: "#1C76BB",
     }];
 
     var plotObj = $.plot($("#flot-pie-chart"), data, {
@@ -401,7 +401,7 @@ $(function() {
                 return markings;
             }
         },
-        colors: ["#446CB3"],
+        colors: ["#1C76BB"],
         xaxis: {
             tickFormatter: function () {
                 return "";
@@ -456,7 +456,7 @@ $(function() {
             legend: {
                 position: 'sw'
             },
-            colors: ["#446CB3"],
+            colors: ["#1C76BB"],
             grid: {
                 color: "#999999",
                 hoverable: true,
