--- a/app/views/graphs/peity.html.erb
+++ b/app/views/graphs/peity.html.erb
@@ -185,24 +185,24 @@
 $(function() {
 
     $("span.pie").peity("pie", {
-        fill: ['#446CB3', '#d7d7d7', '#ffffff']
+        fill: ['#1C76BB', '#d7d7d7', '#ffffff']
     })
 
     $(".line").peity("line", {
-        fill: '#446CB3',
+        fill: '#1C76BB',
         stroke: '#169c81',
     })
 
     $(".bar").peity("bar", {
-        fill: ["#446CB3", "#d7d7d7"]
+        fill: ["#1C76BB", "#d7d7d7"]
     })
 
     $(".bar_dashboard").peity("bar", {
-        fill: ["#446CB3", "#d7d7d7"],
+        fill: ["#1C76BB", "#d7d7d7"],
         width: 100
     })
 
-    var updatingChart = $(".updating-chart").peity("line", { fill: '#446CB3', stroke: '#169c81', width: 64 })
+    var updatingChart = $(".updating-chart").peity("line", { fill: '#1C76BB', stroke: '#169c81', width: 64 })
 
     setInterval(function () {
         var random = Math.round(Math.random() * 10)
