--- a/app/views/graphs/rickshaw.html.erb
+++ b/app/views/graphs/rickshaw.html.erb
@@ -250,7 +250,7 @@ $(function() {
     var graph = new Rickshaw.Graph({
         element: document.querySelector("#chart"),
         series: [{
-            color: '#446CB3',
+            color: '#1C76BB',
             data: [
                 { x: 0, y: 40 },
                 { x: 1, y: 49 },
@@ -267,7 +267,7 @@ $(function() {
         stroke: true,
         series: [{
             data: [{ x: 0, y: 40 }, { x: 1, y: 49 }, { x: 2, y: 38 }, { x: 3, y: 20 }, { x: 4, y: 16 }],
-            color: '#446CB3',
+            color: '#1C76BB',
             stroke: '#17997f'
         }, {
             data: [{ x: 0, y: 22 }, { x: 1, y: 25 }, { x: 2, y: 38 }, { x: 3, y: 44 }, { x: 4, y: 46 }],
@@ -283,7 +283,7 @@ $(function() {
         renderer: 'line',
         series: [{
             data: [{ x: 0, y: 40 }, { x: 1, y: 49 }, { x: 2, y: 38 }, { x: 3, y: 30 }, { x: 4, y: 32 }],
-            color: '#446CB3'
+            color: '#1C76BB'
         }]
     });
     graph3.render();
@@ -293,7 +293,7 @@ $(function() {
         renderer: 'line',
         series: [{
             data: [{ x: 0, y: 40 }, { x: 1, y: 49 }, { x: 2, y: 38 }, { x: 3, y: 30 }, { x: 4, y: 32 }],
-            color: '#446CB3'
+            color: '#1C76BB'
         }, {
             data: [{ x: 0, y: 20 }, { x: 1, y: 24 }, { x: 2, y: 19 }, { x: 3, y: 15 }, { x: 4, y: 16 }],
             color: '#d7d7d7'
@@ -306,7 +306,7 @@ $(function() {
         renderer: 'bar',
         series: [{
             data: [{ x: 0, y: 40 }, { x: 1, y: 49 }, { x: 2, y: 38 }, { x: 3, y: 30 }, { x: 4, y: 32 }],
-            color: '#446CB3'
+            color: '#1C76BB'
         }]
     });
     graph5.render();
@@ -317,7 +317,7 @@ $(function() {
         series: [
             {
                 data: [{ x: 0, y: 40 }, { x: 1, y: 49 }, { x: 2, y: 38 }, { x: 3, y: 30 }, { x: 4, y: 32 }],
-                color: '#446CB3'
+                color: '#1C76BB'
             }, {
                 data: [{ x: 0, y: 20 }, { x: 1, y: 24 }, { x: 2, y: 19 }, { x: 3, y: 15 }, { x: 4, y: 16 }],
                 color: '#d7d7d7'
@@ -343,7 +343,7 @@ $(function() {
                 { x: 9, y: 18 },
                 { x: 10, y: 16 }
             ],
-            color: '#446CB3'
+            color: '#1C76BB'
         }]
     });
     graph7.render();
