--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,20 +4,20 @@
       <li class="nav-header">
         <div class="dropdown profile-element">
           <span>
-
+            <%= image_tag 'logo-patch.png', class: "img-circle", style: 'max-width: 30%; text-align: center' %>
           </span>
           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
             <span class="clear">
               <span class="block m-t-xs">
                 <strong class="font-bold"><%= "#{current_user.first_name} #{current_user.last_name}" if current_user %></strong>
               </span>
-              <span class="text-muted text-xs block">
-                EMT New Jersey<b class="caret"></b>
-              </span>
+              <!--              <span class="text-muted text-xs block">-->
+              <!--                EMT New Jersey<b class="caret"></b>-->
+              <!--              </span>-->
             </span>
           </a>
           <ul class="dropdown-menu animated fadeInRight m-t-xs">
-            <li><a href="<%= edit_user_url(current_user) %>">Profile</a></li>
+            <li><a href="<%= edit_user_url(current_user) if current_user %>">Profile</a></li>
             <li><a href="">Settings</a></li>
             <li><a href="">Mailbox</a></li>
           </ul>
