--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -272,16 +272,16 @@
         $(function () {
 
             $("span.pie").peity("pie", {
-                fill: ['#446CB3', '#d7d7d7', '#ffffff']
+                fill: ['#1C76BB', '#d7d7d7', '#ffffff']
             })
 
             $(".line").peity("line", {
-                fill: '#446CB3',
+                fill: '#1C76BB',
                 stroke: '#169c81',
             })
 
             $(".bar").peity("bar", {
-                fill: ["#446CB3", "#d7d7d7"]
+                fill: ["#1C76BB", "#d7d7d7"]
             })
 
 
