[issue-30][ RJ ] added some flag css things

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,9 @@
     <li style="text-decoration: none" class="navbar-text"><%= link_to "Terms of Use & Privacy Policy", privacy_path %></li>
     <li style="text-decoration: none" class="navbar-text"><a href="#">RespondersNOW.com &copy; 2018</a>
     </li>
-    <li style="text-decoration: none" class="navbar-text"><a href="#">Made in America</a></li>
+    <li style="text-decoration: none" class="navbar-text"><a href="#">
+      <span class="flag-icon flag-icon-us"></span>
+      Made in America</a></li>
   </ul>
 </div>
 
