[issue-30][ RJ ] added some things

--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -37,158 +37,15 @@
   </section>
   <section>
     <div class="row">
-      <!--      <div class="col-md-9">-->
-      <!--        <div class="panel panel-info">-->
-      <!--          <div class="panel-heading">-->
-      <!--            <h5 class="panel-title">Upcoming Classes within 10 Miles of 08902</h5>-->
-      <!--          </div>-->
-      <!--          <div class="panel-body">-->
-      <!--            <table class="table table-hover no-margins">-->
-      <!--              <thead>-->
-      <!--              <tr>-->
-      <!--                <th>Status</th>-->
-      <!--                <th>Date</th>-->
-      <!--                <th>Class</th>-->
-      <!--                <th>Location</th>-->
-      <!--                <th></th>-->
-      <!--              </tr>-->
-      <!--              </thead>-->
-      <!--              <tbody>-->
-      <!--              <tr>-->
-      <!--                <td>-->
-      <!--                  <small>open</small>-->
-      <!--                </td>-->
-      <!--                <td><i class="far fa-clock"></i> 11-10 11:20pm</td>-->
-      <!--                <td>CPR</td>-->
-      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
-      <!--                <td><a href="">register</a></td>-->
-      <!--              </tr>-->
-      <!--              <tr>-->
-      <!--                <td>-->
-      <!--                  <small>open</small>-->
-      <!--                </td>-->
-      <!--                <td><i class="far fa-clock"></i> 11-10 11:20pm</td>-->
-      <!--                <td>TCCC</td>-->
-      <!--                <td class="text-navy">Camden, NJ</td>-->
-      <!--                <td><a href="">register</a></td>-->
-      <!--              </tr>-->
-      <!--              <tr>-->
-      <!--                <td>-->
-      <!--                  <small>open</small>-->
-      <!--                </td>-->
-      <!--                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>-->
-      <!--                <td>CPR</td>-->
-      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
-      <!--                <td><a href="">register</a></td>-->
-      <!--              </tr>-->
-      <!--              <tr>-->
-      <!--                <td>-->
-      <!--                  <small>open</small>-->
-      <!--                </td>-->
-      <!--                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>-->
-      <!--                <td>CPR</td>-->
-      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
-      <!--                <td><a href="">register</a></td>-->
-      <!--              </tr>-->
-      <!--              <tr>-->
-      <!--                <td>-->
-      <!--                  <small>open</small>-->
-      <!--                </td>-->
-      <!--                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>-->
-      <!--                <td>First Aid</td>-->
-      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
-      <!--                <td><a href="">register</a></td>-->
-      <!--              </tr>-->
-      <!--              <tr>-->
-      <!--                <td>-->
-      <!--                  <small>open</small>-->
-      <!--                </td>-->
-      <!--                <td><i class="far fa-clock"></i> 12-12 11:20pm</td>-->
-      <!--                <td>Etrication I</td>-->
-      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
-      <!--                <td><a href="">register</a></td>-->
-      <!--              </tr>-->
-
-      <!--              </tbody>-->
-      <!--            </table>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </div>-->
       <div class="col-md-9">
-        <div class="ibox float-e-margins">
-          <div class="ibox-title">
-            <h5><i class="fas fa-info-circle"></i> Primary Professional Certifications</h5>
-
-            <button
-              type="button"
-              data-toggle="modal"
-              data-target="#primary-certification"
-              class="pull-right">
-              <i class="fa fa-plus"></i> Add
-            </button>
-            <div class="col-lg-4">
-              <style>
-                .center-btn {
-                  display: flex;
-                  justify-content: center;
-                }
-              </style>
-              <!-- Trigger the modal with a button -->
-              <!-- Modal -->
-              <div id="primary-certification" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                  <!-- Modal content-->
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title">Add New Professional Certification / License</h4>
-                    </div>
-
-                    <div class="modal-body">
-                      <%= render partial: 'certifications/form', locals: {primary: true, cert: @certification} %>
-                    </div>
-                    <div class="modal-footer">
-
-                      <button type="button" class="btn btn-danger" data-dismiss="modal">
-                        <i class="fas fa-ban"></i> Cancel
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div> <!-- END OF COL/-->
-
-
-        </div>
-        <div class="ibox-content">
-          <div>
-            <div class="feed-activity-list">
-              <!--              //-->
-              <% current_user.primaries.each do |cert| %>
-                <div class="feed-element">
-                  <a href="#" class="pull-left">
-                    <img alt="image" style="max-width: 5%" src="<%= image_path(cert.cert_logo) %>">
-                    <strong><%= cert.state.upcase %> <%= cert.abbvr %> <%= "##{cert.number}" if cert.number %> </strong>
-                    <i class="far fa-id-card"></i>
-                  </a>
-                  <div class="media-body ">
-
-                  </div>
-                </div>
-              <% end %>
-
-              <!-- END OF CERTS //-->
-            </div>
-          </div>
-        </div>
+        <%= render partial: 'certifications/pro_certs' %>
       </div>
     </div>
     <div class="col-md-3">
       <div class="1234"></div>
       <%= google_adsense_include_tag client: 'ca-pub-7581132771547508', slot: '1234', enable_page_level_ads: true %>
     </div>
+  </section>
 </div>
 
 
