--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,15 +11,15 @@
               <span class="block m-t-xs">
                 <strong class="font-bold"><%= "#{current_user.first_name} #{current_user.last_name}" if current_user %></strong>
               </span>
-              <!--              <span class="text-muted text-xs block">-->
-              <!--                EMT New Jersey<b class="caret"></b>-->
-              <!--              </span>-->
+                            <span class="text-muted text-xs block">
+                              EMT New Jersey<b class="caret"></b>
+                            </span>
             </span>
           </a>
           <ul class="dropdown-menu animated fadeInRight m-t-xs">
             <li><a href="<%= edit_user_url(current_user) if current_user %>">Profile</a></li>
-            <li><a href="">Settings</a></li>
-            <li><a href="">Mailbox</a></li>
+            <li><a href="<%= edit_user_url(current_user) if current_user %>">Settings</a></li>
+            <li><a href="#">Mailbox</a></li>
           </ul>
         </div>
         <div class="logo-element">
